--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
-<?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-   	tools:context=".MainActivity" 
-   	android:background="#fff" >
+    tools:context=".MainActivity" >
 
+    <khoinguyen.sample.animflashcard.StackView
+        android:id="@+id/stack_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+    </khoinguyen.sample.animflashcard.StackView>
 
-</FrameLayout>
+</RelativeLayout>
