--- a/res/layout/view_card.xml
+++ b/res/layout/view_card.xml
@@ -2,24 +2,16 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#66ffffff"
+    android:background="@drawable/bg_card"
     android:orientation="vertical" >
 
     <TextView
         android:id="@+id/tv_card_content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:padding="4dp"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <TextView
-        android:id="@+id/tv_card_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#66000000"
-        android:padding="4dp"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textColor="#fff"
+        android:textStyle="bold" />
 
 </LinearLayout>
